--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>My first portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h2>Mary</h2>
+            <ul>
+                <li>Portfio</li>
+                <li>Blogs</li>
+                <li><button>Hire</button></li>
+
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
