--- a/index.html
+++ b/index.html
@@ -5,18 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first portfolio</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
-            <h2>Mary</h2>
+            <h2 class="font-tittle">Ma<span class="primary-text">r</span>y</h2>
             <ul>
                 <li>Portfio</li>
                 <li>Blogs</li>
-                <li><button>Hire</button></li>
+                <li><button class="btn-primary" >Hire</button></li>
 
             </ul>
+           
         </nav>
+         <!-- Banner -->
+         <div class="banner">
+            <div>
+                <h3 class="banner-title">Hi, I am</h3>
+                <h1 class="banner-sub-title">Rafique Miah</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary" > Downlode cv</button>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
     </header>
 </body>
 </html>
